Add support for JUnit tests

--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,14 @@
 	<groupId>soccer-match</groupId>
 	<artifactId>soccer-match</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+		</dependency>
+	</dependencies>
+
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
